# xmcp

./: .clinerules  .cursorrules  .env.example  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  LLM_CONTEXT.md  QUICKSTART.md  README.md  pyproject.toml
configs/: chatgpt-mcp.json  continue.json  continue.yaml  genkit-plugin.ts  openclaw-skill.yaml  sourcegraph-openctx.json  taal.yaml  vscode-openmcp.json  zed-settings.json
docs/: AGENT_RULES.md
src/x_twitter_mcp/: __init__.py  config.py  errors.py  middleware.py  server.py
src/xmcp/: config.py  http_server.py  server.py
tests/: test_errors.py  test_permissions.py
